@@ -1,37 +1,46 @@
 package src.agent_sdk.compatibility_layers.aggregation_service.test.payments;
 
-import java.util.Collections;
 import java.util.List;
 import org.hamcrest.MatcherAssert;
 import org.hamcrest.Matchers;
 import org.junit.Assert;
 import org.junit.Test;
+import se.tink.agent.sdk.models.payments.BeneficiaryError;
+import se.tink.agent.sdk.models.payments.BeneficiaryState;
 import se.tink.agent.sdk.models.payments.PaymentError;
+import se.tink.agent.sdk.models.payments.beneficiary_register_result.BeneficiaryRegisterResult;
 import se.tink.agent.sdk.models.payments.bulk_payment_register_result.BulkPaymentRegisterResult;
 import se.tink.agent.sdk.models.payments.bulk_payment_sign_result.BulkPaymentSignResult;
 import se.tink.agent.sdk.models.payments.payment.Payment;
 import src.agent_sdk.compatibility_layers.aggregation_service.src.payments.report.PaymentInitiationReport;
 import src.agent_sdk.compatibility_layers.aggregation_service.src.payments.report.PaymentInitiationState;
+import src.agent_sdk.compatibility_layers.aggregation_service.test.payments.test_agent.BulkPaymentAndBeneficiaryTestAgent;
+import src.agent_sdk.compatibility_layers.aggregation_service.test.payments.test_agent.PaymentsTestContract;
+import src.agent_sdk.compatibility_layers.aggregation_service.test.payments.test_agent.PaymentsTestExecutionReport;
 
 public class BulkPaymentInitiationEarlyFailuresTest {
 
     @Test
-    public void testEarlyFailureOnRegister() {
-        // Set up the agent to fail all payments on register.
-        // The process should not continue to sign.
-        BulkPaymentTestAgent agent =
-                new BulkPaymentTestAgent(
-                        List.of(
-                                BulkPaymentRegisterResult.builder()
-                                        .reference(PaymentInitiationTestHelper.PAYMENT_1_REF)
-                                        .error(PaymentError.AMOUNT_LARGER_THAN_BANK_LIMIT)
-                                        .build(),
-                                BulkPaymentRegisterResult.builder()
-                                        .reference(PaymentInitiationTestHelper.PAYMENT_2_REF)
-                                        .error(PaymentError.AMOUNT_LESS_THAN_BANK_LIMIT)
-                                        .build()),
-                        Collections.emptyList(),
-                        Collections.emptyList());
+    public void testEarlyFailureOnRegisterBeneficiary() {
+        PaymentsTestExecutionReport executionReport = new PaymentsTestExecutionReport();
+
+        BulkPaymentAndBeneficiaryTestAgent agent =
+                new BulkPaymentAndBeneficiaryTestAgent(
+                        executionReport,
+                        PaymentsTestContract.builder()
+                                .registerBeneficiaryResult(
+                                        PaymentInitiationTestHelper.PAYMENT_1_BENEFICIARY,
+                                        BeneficiaryRegisterResult.builder()
+                                                .error(
+                                                        BeneficiaryError
+                                                                .BENEFICIARY_INVALID_ACCOUNT_TYPE)
+                                                .build())
+                                .registerBeneficiaryResult(
+                                        PaymentInitiationTestHelper.PAYMENT_2_BENEFICIARY,
+                                        BeneficiaryRegisterResult.builder()
+                                                .error(BeneficiaryError.BENEFICIARY_INVALID)
+                                                .build())
+                                .build());
 
         List<Payment> payments =
                 List.of(
@@ -43,10 +52,167 @@ public class BulkPaymentInitiationEarlyFailuresTest {
 
         // Assert that the agent processed the expected payments at every step.
         MatcherAssert.assertThat(
+                List.of(PaymentInitiationTestHelper.DEBTOR_1_ACCOUNT_IDENTIFIER),
+                Matchers.containsInAnyOrder(
+                        executionReport.getAccountsAskedToFetchBeneficiariesFor().toArray()));
+
+        MatcherAssert.assertThat(
+                List.of(
+                        PaymentInitiationTestHelper.PAYMENT_1_BENEFICIARY,
+                        PaymentInitiationTestHelper.PAYMENT_2_BENEFICIARY),
+                Matchers.containsInAnyOrder(
+                        executionReport.getBeneficiariesAskedToRegister().toArray()));
+
+        Assert.assertTrue(executionReport.getBeneficiariesAskedToSign().isEmpty());
+        Assert.assertTrue(executionReport.getPaymentsAskedToRegister().isEmpty());
+        Assert.assertTrue(executionReport.getPaymentsAskedToSign().isEmpty());
+        Assert.assertTrue(executionReport.getPaymentsAskedToGetSignStatus().isEmpty());
+
+        // Assert that the final report contain the expected final statuses and/or errors.
+        List<PaymentInitiationState> expectedFinalPaymentStates =
+                List.of(
+                        PaymentInitiationState.builder()
+                                .paymentReference(PaymentInitiationTestHelper.PAYMENT_1_REF)
+                                .error(BeneficiaryError.BENEFICIARY_INVALID_ACCOUNT_TYPE)
+                                .build(),
+                        PaymentInitiationState.builder()
+                                .paymentReference(PaymentInitiationTestHelper.PAYMENT_2_REF)
+                                .error(BeneficiaryError.BENEFICIARY_INVALID)
+                                .build());
+        MatcherAssert.assertThat(
+                expectedFinalPaymentStates,
+                Matchers.containsInAnyOrder(
+                        paymentInitiationReport.getFinalPaymentStates().toArray()));
+    }
+
+    @Test
+    public void testEarlyFailureOnSignBeneficiary() {
+        PaymentsTestExecutionReport executionReport = new PaymentsTestExecutionReport();
+
+        BulkPaymentAndBeneficiaryTestAgent agent =
+                new BulkPaymentAndBeneficiaryTestAgent(
+                        executionReport,
+                        PaymentsTestContract.builder()
+                                .registerBeneficiaryResult(
+                                        PaymentInitiationTestHelper.PAYMENT_1_BENEFICIARY,
+                                        BeneficiaryRegisterResult.builder()
+                                                .noError()
+                                                .noBankReference()
+                                                .build())
+                                .registerBeneficiaryResult(
+                                        PaymentInitiationTestHelper.PAYMENT_2_BENEFICIARY,
+                                        BeneficiaryRegisterResult.builder()
+                                                .noError()
+                                                .noBankReference()
+                                                .build())
+                                .signBeneficiaryResult(
+                                        PaymentInitiationTestHelper.PAYMENT_1_BENEFICIARY,
+                                        BeneficiaryState.error(
+                                                BeneficiaryError.BENEFICIARY_INVALID_ACCOUNT_TYPE))
+                                .signBeneficiaryResult(
+                                        PaymentInitiationTestHelper.PAYMENT_2_BENEFICIARY,
+                                        BeneficiaryState.error(
+                                                BeneficiaryError.BENEFICIARY_INVALID))
+                                .build());
+
+        List<Payment> payments =
+                List.of(
+                        PaymentInitiationTestHelper.PAYMENT_1,
+                        PaymentInitiationTestHelper.PAYMENT_2);
+
+        PaymentInitiationReport paymentInitiationReport =
+                PaymentInitiationTestHelper.initiateBulkPayments(agent, payments);
+
+        // Assert that the agent processed the expected payments at every step.
+        MatcherAssert.assertThat(
+                List.of(PaymentInitiationTestHelper.DEBTOR_1_ACCOUNT_IDENTIFIER),
+                Matchers.containsInAnyOrder(
+                        executionReport.getAccountsAskedToFetchBeneficiariesFor().toArray()));
+
+        MatcherAssert.assertThat(
+                List.of(
+                        PaymentInitiationTestHelper.PAYMENT_1_BENEFICIARY,
+                        PaymentInitiationTestHelper.PAYMENT_2_BENEFICIARY),
+                Matchers.containsInAnyOrder(
+                        executionReport.getBeneficiariesAskedToRegister().toArray()));
+
+        MatcherAssert.assertThat(
+                List.of(
+                        PaymentInitiationTestHelper.PAYMENT_1_BENEFICIARY,
+                        PaymentInitiationTestHelper.PAYMENT_2_BENEFICIARY),
+                Matchers.containsInAnyOrder(
+                        executionReport.getBeneficiariesAskedToSign().toArray()));
+
+        Assert.assertTrue(executionReport.getPaymentsAskedToRegister().isEmpty());
+        Assert.assertTrue(executionReport.getPaymentsAskedToSign().isEmpty());
+        Assert.assertTrue(executionReport.getPaymentsAskedToGetSignStatus().isEmpty());
+
+        // Assert that the final report contain the expected final statuses and/or errors.
+        List<PaymentInitiationState> expectedFinalPaymentStates =
+                List.of(
+                        PaymentInitiationState.builder()
+                                .paymentReference(PaymentInitiationTestHelper.PAYMENT_1_REF)
+                                .error(BeneficiaryError.BENEFICIARY_INVALID_ACCOUNT_TYPE)
+                                .build(),
+                        PaymentInitiationState.builder()
+                                .paymentReference(PaymentInitiationTestHelper.PAYMENT_2_REF)
+                                .error(BeneficiaryError.BENEFICIARY_INVALID)
+                                .build());
+        MatcherAssert.assertThat(
+                expectedFinalPaymentStates,
+                Matchers.containsInAnyOrder(
+                        paymentInitiationReport.getFinalPaymentStates().toArray()));
+    }
+
+    @Test
+    public void testEarlyFailureOnRegisterPayment() {
+        // Set up the agent to fail all payments on register.
+        // The process should not continue to sign.
+        PaymentsTestExecutionReport executionReport = new PaymentsTestExecutionReport();
+        BulkPaymentAndBeneficiaryTestAgent agent =
+                new BulkPaymentAndBeneficiaryTestAgent(
+                        executionReport,
+                        PaymentsTestContract.builder()
+                                .fetchBeneficiaryResult(
+                                        PaymentInitiationTestHelper.DEBTOR_1_ACCOUNT_IDENTIFIER,
+                                        List.of(
+                                                PaymentInitiationTestHelper.BENEFICIARY_ALICE,
+                                                PaymentInitiationTestHelper.BENEFICIARY_BOB))
+                                .registerPaymentResult(
+                                        BulkPaymentRegisterResult.builder()
+                                                .reference(
+                                                        PaymentInitiationTestHelper.PAYMENT_1_REF)
+                                                .error(PaymentError.AMOUNT_LARGER_THAN_BANK_LIMIT)
+                                                .build())
+                                .registerPaymentResult(
+                                        BulkPaymentRegisterResult.builder()
+                                                .reference(
+                                                        PaymentInitiationTestHelper.PAYMENT_2_REF)
+                                                .error(PaymentError.AMOUNT_LESS_THAN_BANK_LIMIT)
+                                                .build())
+                                .build());
+
+        List<Payment> payments =
+                List.of(
+                        PaymentInitiationTestHelper.PAYMENT_1,
+                        PaymentInitiationTestHelper.PAYMENT_2);
+
+        PaymentInitiationReport paymentInitiationReport =
+                PaymentInitiationTestHelper.initiateBulkPayments(agent, payments);
+
+        // Assert that the agent processed the expected payments at every step.
+        MatcherAssert.assertThat(
+                List.of(PaymentInitiationTestHelper.DEBTOR_1_ACCOUNT_IDENTIFIER),
+                Matchers.containsInAnyOrder(
+                        executionReport.getAccountsAskedToFetchBeneficiariesFor().toArray()));
+        Assert.assertTrue(executionReport.getBeneficiariesAskedToRegister().isEmpty());
+        Assert.assertTrue(executionReport.getBeneficiariesAskedToSign().isEmpty());
+        MatcherAssert.assertThat(
                 payments,
-                Matchers.containsInAnyOrder(agent.getPaymentsAskedToRegister().toArray()));
-        Assert.assertTrue(agent.getPaymentsAskedToSign().isEmpty());
-        Assert.assertTrue(agent.getPaymentsAskedToGetStatus().isEmpty());
+                Matchers.containsInAnyOrder(
+                        executionReport.getPaymentsAskedToRegister().toArray()));
+        Assert.assertTrue(executionReport.getPaymentsAskedToSign().isEmpty());
+        Assert.assertTrue(executionReport.getPaymentsAskedToGetSignStatus().isEmpty());
 
         // Assert that the final report contain the expected final statuses and/or errors.
         List<PaymentInitiationState> expectedFinalPaymentStates =
@@ -66,32 +232,46 @@ public class BulkPaymentInitiationEarlyFailuresTest {
     }
 
     @Test
-    public void testEarlyFailureOnSign() {
+    public void testEarlyFailureOnSignPayment() {
         // Set up the agent to fail all payments on sign.
         // The process should not continue to getStatus.
-        BulkPaymentTestAgent agent =
-                new BulkPaymentTestAgent(
-                        List.of(
-                                BulkPaymentRegisterResult.builder()
-                                        .reference(PaymentInitiationTestHelper.PAYMENT_1_REF)
-                                        .noError()
-                                        .build(),
-                                BulkPaymentRegisterResult.builder()
-                                        .reference(PaymentInitiationTestHelper.PAYMENT_2_REF)
-                                        .noError()
-                                        .build()),
-                        List.of(
-                                BulkPaymentSignResult.builder()
-                                        .reference(PaymentInitiationTestHelper.PAYMENT_1_REF)
-                                        .error(PaymentError.AMOUNT_LARGER_THAN_BANK_LIMIT)
-                                        .noDebtor()
-                                        .build(),
-                                BulkPaymentSignResult.builder()
-                                        .reference(PaymentInitiationTestHelper.PAYMENT_2_REF)
-                                        .error(PaymentError.AMOUNT_LESS_THAN_BANK_LIMIT)
-                                        .noDebtor()
-                                        .build()),
-                        Collections.emptyList());
+        PaymentsTestExecutionReport executionReport = new PaymentsTestExecutionReport();
+        BulkPaymentAndBeneficiaryTestAgent agent =
+                new BulkPaymentAndBeneficiaryTestAgent(
+                        executionReport,
+                        PaymentsTestContract.builder()
+                                .fetchBeneficiaryResult(
+                                        PaymentInitiationTestHelper.DEBTOR_1_ACCOUNT_IDENTIFIER,
+                                        List.of(
+                                                PaymentInitiationTestHelper.BENEFICIARY_ALICE,
+                                                PaymentInitiationTestHelper.BENEFICIARY_BOB))
+                                .registerPaymentResult(
+                                        BulkPaymentRegisterResult.builder()
+                                                .reference(
+                                                        PaymentInitiationTestHelper.PAYMENT_1_REF)
+                                                .noError()
+                                                .build())
+                                .registerPaymentResult(
+                                        BulkPaymentRegisterResult.builder()
+                                                .reference(
+                                                        PaymentInitiationTestHelper.PAYMENT_2_REF)
+                                                .noError()
+                                                .build())
+                                .signPaymentResult(
+                                        BulkPaymentSignResult.builder()
+                                                .reference(
+                                                        PaymentInitiationTestHelper.PAYMENT_1_REF)
+                                                .error(PaymentError.AMOUNT_LARGER_THAN_BANK_LIMIT)
+                                                .noDebtor()
+                                                .build())
+                                .signPaymentResult(
+                                        BulkPaymentSignResult.builder()
+                                                .reference(
+                                                        PaymentInitiationTestHelper.PAYMENT_2_REF)
+                                                .error(PaymentError.AMOUNT_LESS_THAN_BANK_LIMIT)
+                                                .noDebtor()
+                                                .build())
+                                .build());
 
         List<Payment> payments =
                 List.of(
@@ -103,11 +283,19 @@ public class BulkPaymentInitiationEarlyFailuresTest {
 
         // Assert that the agent processed the expected payments at every step.
         MatcherAssert.assertThat(
-                payments,
-                Matchers.containsInAnyOrder(agent.getPaymentsAskedToRegister().toArray()));
+                List.of(PaymentInitiationTestHelper.DEBTOR_1_ACCOUNT_IDENTIFIER),
+                Matchers.containsInAnyOrder(
+                        executionReport.getAccountsAskedToFetchBeneficiariesFor().toArray()));
+        Assert.assertTrue(executionReport.getBeneficiariesAskedToRegister().isEmpty());
+        Assert.assertTrue(executionReport.getBeneficiariesAskedToSign().isEmpty());
         MatcherAssert.assertThat(
-                payments, Matchers.containsInAnyOrder(agent.getPaymentsAskedToSign().toArray()));
-        Assert.assertTrue(agent.getPaymentsAskedToGetStatus().isEmpty());
+                payments,
+                Matchers.containsInAnyOrder(
+                        executionReport.getPaymentsAskedToRegister().toArray()));
+        MatcherAssert.assertThat(
+                payments,
+                Matchers.containsInAnyOrder(executionReport.getPaymentsAskedToSign().toArray()));
+        Assert.assertTrue(executionReport.getPaymentsAskedToGetSignStatus().isEmpty());
 
         // Assert that the final report contain the expected final statuses and/or errors.
         List<PaymentInitiationState> expectedFinalPaymentStates =
